subprojects {
    apply plugin: "maven-publish"
    ext.xtextVersion = '2.18.0.M3'
    group = 'eu.quanticol.moonlight'
    version = '1.0-SNAPSHOT'
    description = 'MoonLight: a light-weight framework for runtime monitoring'
    status = 'status'

    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'distribution'
    apply plugin: 'jacoco'
    apply from: rootDir.absolutePath + '/module.gradle'

    javadoc {
        source = sourceSets.main.allJava
        classpath = configurations.compile
    }

    sourceCompatibility = 8
    targetCompatibility = 8

    compileJava.options.encoding = "UTF-8"
    compileTestJava.options.encoding = "UTF-8"

    repositories {
        jcenter()
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    }


    clean.doFirst {
        delete "${rootDir}/output/"
        println "deleating jars in  ${rootDir}/output/"
        delete "${rootDir}/distribution/"
        println "deleating jars in  ${rootDir}/distribution/"
        delete "${rootDir}/distribution_files/java/lib/moonlight.jar"
        println "deleating ${rootDir}/distribution_files/java/lib/moonlight.jar"
        delete "${rootDir}/distribution_files/matlab/moonlight/jar/"
        println "deleating jars in  ${rootDir}/distribution_files/matlab/moonlight/jar/"
        delete "${rootDir}/distribution_files/python/jar/"
        println "${rootDir}/distribution_files/python/jar/"

    }
    publishing {
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/Quanticol/MoonLight")
                credentials {
                    username = System.getenv("GITHUB_ACTOR")
                    password = System.getenv("GITHUB_TOKEN")
                }
            }
        }
    }

    jacocoTestReport {
        reports {
            xml.enabled true
            html.enabled false
        }
    }

    check.dependsOn jacocoTestReport
}

